--- a/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
+++ b/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
@@ -68,12 +68,13 @@
         }
     </tbody>
 </table>
+<script src="~/js/jquery-3.2.1.min.js"></script>
+<script src="~/js/jquery-migrate.min.js"></script>
+<script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+@*Toevoegen voor tables + sortering*@
+<script>
+    $(document).ready(function () {
+        $('#myTable').DataTable();
+    });
 
-    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    @*Toevoegen voor tables + sortering*@
-    <script>
-        $(document).ready(function () {
-            $('#myTable').DataTable();
-        });
-
-    </script>
+</script>
