--- a/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
+++ b/ProjectTreinritten/Views/Trein/KiezenRit.cshtml
@@ -69,17 +69,17 @@
         <div class="row">
             <div class="col-6">
                 @Model.Vertrekpunt
-            </div>           
+            </div>
             <div class="col-6">
                 @Model.Eindpunt
             </div>
         </div>
         <div class="row">
             <div class="col-6">
-                @Model.Naam1
-            </div>               
+                @Model.Namen
+            </div>
             <div class="col-6">
-                @Model.Voornaam1
+                @Model.Voornamen
             </div>
         </div>
         <div class="row">
@@ -87,19 +87,21 @@
                 @Model.Klasse
             </div>
             <div class="col-6">
-                @Model.HotelNaam
+                @Model.HotelId
             </div>
         </div>
         <div>
             <div id="GekozenRit" class="col-12" style="display:none">
-                
+
             </div>
         </div>
-        <input type="submit" id="hiddenKnop" style="display:none"/>
+        <input type="submit" id="hiddenKnop" style="display:none" />
     </form>
 </div>
+<script src="~/js/jquery-3.2.1.min.js"></script>
+<script src="~/js/jquery-migrate.min.js"></script>
 <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    @*Toevoegen voor tables + sortering*@
+@*Toevoegen voor tables + sortering*@
 <script>
     $(document).ready(function () {
         $('#myTable').DataTable();
