--- a/ProjectTreinritten/Views/Shared/_Layout.cshtml
+++ b/ProjectTreinritten/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <nav>
                                 <ul>
                                     <li>
-                                        <div style="color:white"> <button type="submit">Afmelden</button></div>
+                                        <div style="color:white"> <button class="normalLook" type="submit">Afmelden</button></div>
                                     </li>
                                     <li>
                                         <a class="white"><div style="color:white">Mijn account</div></a>
